ultimate-devops-project-demo/kubernetes/learning/otel/otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: opentelimetry
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  replicas: 1
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector:0.61.0
        command: ["/otelcol", "--config=/conf/otel-collector-config.yaml"]
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 4317 # OTLP gRPC
        - containerPort: 4318 # OTLP HTTP
        - containerPort: 8889 # Prometheus Metrics
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
      volumes:
      - name: otel-collector-config-vol
        configMap:
          name: otel-collector-conf
          items:
            - key: otel-collector-config
              path: otel-collector-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: opentelimetry
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  ports:
  - name: otlp-grpc # Default endpoint for OTel gRPC traces
    port: 4317
    targetPort: 4317
  - name: otlp-http # Default endpoint for OTel HTTP traces
    port: 4318
    targetPort: 4318
  - name: prometheus # Prometheus metrics exporter
    port: 8889
    targetPort: 8889
  selector:
    app: opentelemetry
    component: otel-collector
